@@ -1,9 +1,10 @@
 Package: oligoClasses
-Version: 1.5.15
+Version: 1.5.16
 Title: Classes for high-throughput SNP arrays
 Author: Benilton Carvalho <bcarvalh@jhsph.edu> and  Robert Scharpf <rscharpf@jhsph.edu>
 Maintainer: Benilton Carvalho <bcarvalh@jhsph.edu> 
-Depends: R (>= 2.6.0), methods, Biobase
+Depends: methods, Biobase,
+Imports: graphics
 Suggests: RSQLite, oligo
 Description: This package contains class definitions, validity checks, and initialization methods for classes used by the oligo package.
 License: GPL version 2 or newer
